--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Lorem ipsum dolor sit amet</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Nunc id accumsan velit. Praesent id gravida ante. Aenean sed
     pellentesque magna. <strong>Donec pretium tortor ut arcu gravida, et vehicula eros mattis.</strong> Aenean et luctus urna. Ut laoreet
-    leo dignissim congue condimentum. <span>Aliquam quis placerat nibh. Nunc a augue consequat, maximus ex ac, posuere nulla.</sgit initpan>
+    leo dignissim congue condimentum. <span>Aliquam quis placerat nibh. Nunc a augue consequat, maximus ex ac, posuere nulla.</span>
     Integer dignissim finibus mauris non accumsan. Maecenas a sem non dui bibendum elementum. Sed velit nibh,
     scelerisque et consequat non, venenatis quis turpis.<br> Curabitur laoreet convallis rhoncus.
     Ut sit amet efficitur arcu. In eget erat iaculis, dignissim nibh id, fringilla leo.Proin cursus accumsan tortor vel
